tests/ui/traits/bad-sized.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/bad-sized.rs:4:20
   |
LL |     let x: Vec<dyn Trait + Sized> = Vec::new();
   |                    ^^^^^   ----- first non-auto trait
   |                    |
   |                    additional non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Sized + Trait {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0225`.
